# warehouse_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: bcr_bot_spawn.launch  gazebo.launch
resources/: livox_points_plugin.cpp
rviz/: entire_setup.rviz
urdf/: bcr_bot.xacro  gazebo.xacro
worlds/: small_warehouse (copy).world  small_warehouse.world
